Custom user registration

--- a/car_rental/templates/base.html
+++ b/car_rental/templates/base.html
@@ -2,13 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <title>{% block title %}Car Rental{% endblock %}</title>
 </head>
 <body>
-    <main>
-    {% block content %}
-    {% endblock %}
-    </main>
 
+    {% block content %}
+
+    {% endblock content %}
+
+<footer>
+    <div style="border: 2px solid #000;">
+    Car Rental SDA
+    </div>
+</footer>
 </body>
 </html>
