--- a/car_rental/templates/base.html
+++ b/car_rental/templates/base.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="utf-8">
   <title>{% block title %}Car Rental{% endblock %}</title>
+    {% if request.user.is_authenticated %}
+    <p><a href="{% url 'home' %}">Home</a> | <a href="{% url 'logout' %}">Logout</a></p>
+    <p>Hello, {{request.user.username}}</p>
+    {% else %}
+    <p>
+        <a href="{% url 'home' %}">Home</a> |
+        <a href="{% url 'register' %}">Register</a> |
+        <a href="{% url 'login' %}">Login</a>
+    </p>
+    {% endif %}
+    <hr>
 </head>
 <body>
 
@@ -11,9 +22,9 @@
     {% endblock content %}
 
 <footer>
-    <div style="border: 2px solid #000;">
-    Car Rental SDA
-    </div>
+    <hr>
+    Car Rental SDA 2022
+
 </footer>
 </body>
 </html>
