--- a/car_rental/account/templates/account/login.html
+++ b/car_rental/account/templates/account/login.html
@@ -1,76 +1,62 @@
 {% extends 'base.html' %}
-{% load static %}
 
 {% block content %}
 
 <style type="text/css">
-  .form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
-    }
 
-  .form-signin .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
-  }
-  .form-signin .form-control:focus {
-    z-index: 2;
-  }
-  .form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  .form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
-  }
-  .h3  {
-    text-align: center;
-  }
+  .form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-signin .checkbox {
+  font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 </style>
 
+  <form class="form-signin" method="post">{% csrf_token %}
 
-<form class="form-signin" method="post">{% csrf_token %}
-  <div class="d-flex flex-column pb-3">
-    <img class="img-fluid mx-auto d-block" src="{% static 'codingwithmitch_logo.png' %}" alt="Codignwithmitch logo image" width="72" height="72">
-  </div>
+    <h1 class="h3 mb-3 fw-normal">Login</h1>
 
-  <h1 class="h3 mb-3 font-weight-normal">Login</h1>
+    <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
 
-  <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
 
-  <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-
-  {% for field in login_form %}
+    {%for field in login_form %}
       <p>
-        {% for error in field.errors %}
-          <p style="color: red">{{ error }}</p>
-        {% endfor %}
+      {% for error in field.errors %}
+        <p style="color: red;">{{error}}</p>
+      {% endfor %}
       </p>
-  {% endfor %}
+    {% endfor %}
   {% if login_form.non_field_errors %}
-    <div style="color: red">
-      <p>{{login_form.non_field_errors}}</p>
-    </div>
+  <div style="color: red;">
+    <p>{{login_form.non_field_errors}}</p>
+  </div>
+    {% endif %}
 
-  {% endif %}
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
-
-</form>
-
-<div class="d-flex flex-column">
-  <a class="m-auto" href="{% url 'password_reset' %}">Reset password</a>
-</div>
-
-
+  </form>
 
 {% endblock content %}
 
