--- a/car_rental/account/templates/account/register.html
+++ b/car_rental/account/templates/account/register.html
@@ -46,9 +46,7 @@
 
 
 <form class="form-signin" method="post">{% csrf_token %}
-  <div class="d-flex flex-column pb-3">
-    <img class="img-fluid mx-auto d-block" src="{% static 'codingwithmitch_logo.png' %}" alt="Codignwithmitch logo image" width="72" height="72">
-  </div>
+
   <h1 class="h3 mb-3 font-weight-normal">Register an account</h1>
 
   <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -73,7 +71,7 @@
       
   {% endif %}
 
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+  <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
 
 </form>
 
