--- a/car_rental/templates/base.html
+++ b/car_rental/templates/base.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Car rental</title>
     <meta charset="utf-8">
-  <title>{% block title %}Car Rental{% endblock %}</title>
-    {% if request.user.is_authenticated %}
-    <p><a href="{% url 'home' %}">Home</a> | <a href="{% url 'logout' %}">Logout</a></p>
-    <p>Hello, {{request.user.username}}</p>
-    {% else %}
-    <p>
-        <a href="{% url 'home' %}">Home</a> |
-        <a href="{% url 'register' %}">Register</a> |
-        <a href="{% url 'login' %}">Login</a>
-    </p>
-    {% endif %}
-    <hr>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    {% include 'snippets/header.html '%}
+
 </head>
 <body>
 
+<style type="text/css">
+    .main{
+    min-height: 100vh;
+    height: 100%;
+    }
+
+</style>
+    <div class="main">
     {% block content %}
 
     {% endblock content %}
+    </div>
 
-<footer>
-    <hr>
-    Car Rental SDA 2022
-
-</footer>
+    {% include 'snippets/footer.html '%}
 </body>
+
+
 </html>
