--- a/car_rental/account/templates/account/login.html
+++ b/car_rental/account/templates/account/login.html
@@ -58,5 +58,9 @@
 
   </form>
 
+  <div class="d-flex flex-column">
+    <a class="m-auto" href="{% url 'password_reset' %}">Reset password</a>
+  </div>
+
 {% endblock content %}
 
